--- a/pom.xml
+++ b/pom.xml
@@ -1,191 +1,212 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.renci.node-agent2</groupId>
-  <artifactId>oess-plugin</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+	<groupId>org.renci.node-agent2</groupId>
+	<artifactId>oess-plugin</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
-  <name>oess-plugin</name>
-        <url>https://github.com/RENCI-NRIG/na2-oess-plugin</url>
-        <description>NodeAgent2 plugin for OESS</description>
+	<name>oess-plugin</name>
+	<url>https://github.com/RENCI-NRIG/na2-oess-plugin</url>
+	<description>NodeAgent2 plugin for OESS</description>
 
-        <licenses>
-                <license>
-                        <name>Eclipse Public Licence, Version 1.0</name>
-                        <url>https://www.eclipse.org/legal/epl-v10.html</url>
-                        <distribution>repo</distribution>
-                </license>
-        </licenses>
+	<licenses>
+		<license>
+			<name>Eclipse Public Licence, Version 1.0</name>
+			<url>https://www.eclipse.org/legal/epl-v10.html</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
-        <developers>
-                <developer>
-                        <id>ibaldin</id>
-                        <name>Ilya Baldin</name>
-                        <email>ibaldin@renci.org</email>
-                </developer>
-        </developers>
+	<developers>
+		<developer>
+			<id>ibaldin</id>
+			<name>Ilya Baldin</name>
+			<email>ibaldin@renci.org</email>
+		</developer>
+	</developers>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <na2.version>0.2.1-SNAPSHOT</na2.version>
-  </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<na2.version>0.2.1-SNAPSHOT</na2.version>
+		<spring.boot.version>1.5.3.RELEASE</spring.boot.version>
+		<spring.web.version>4.3.8.RELEASE</spring.web.version>
+		<jackson.version>2.8.8</jackson.version>
+	</properties>
 
-        <scm>
-                <connection>scm:git:https://github.com/RENCI-NRIG/no2-oess-plugin.git</connection>
-                <developerConnection>scm:git:https://github.com/RENCI-NRIG/na2-oess-plugin.git</developerConnection>
-                <url>https://github.com/RENCI-NRIG/na2-oess-plugin</url>
-          <tag>HEAD</tag>
-  </scm>
+	<scm>
+		<connection>scm:git:https://github.com/RENCI-NRIG/no2-oess-plugin.git</connection>
+		<developerConnection>scm:git:https://github.com/RENCI-NRIG/na2-oess-plugin.git</developerConnection>
+		<url>https://github.com/RENCI-NRIG/na2-oess-plugin</url>
+		<tag>HEAD</tag>
+	</scm>
 
-        <repositories>
-                <!-- Orca main repository -->
-                <repository>
-                        <id>${orca.repository.id}</id>
-                        <name>Orca Project Maven Repository</name>
-                        <url>http://ci-dev.renci.org/nexus/content/repositories/geni-orca-libs</url>
-                        <snapshots>
-                                <enabled>false</enabled>
-                        </snapshots>
-                </repository>
-                <!-- ORCA snapshots -->
-                <repository>
-                        <id>${orca.snap.repository.id}</id>
-                        <url>${orca.snap.repository.url}</url>
-                        <snapshots>
-                                <enabled>true</enabled>
-                                <updatePolicy>always</updatePolicy>
-                        </snapshots>
-                </repository>
-        </repositories>
+	<repositories>
+		<!-- Orca main repository -->
+		<repository>
+			<id>${orca.repository.id}</id>
+			<name>Orca Project Maven Repository</name>
+			<url>http://ci-dev.renci.org/nexus/content/repositories/geni-orca-libs</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+		<!-- ORCA snapshots -->
+		<repository>
+			<id>${orca.snap.repository.id}</id>
+			<url>${orca.snap.repository.url}</url>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
+			</snapshots>
+		</repository>
+	</repositories>
 
-        <distributionManagement>
-                <snapshotRepository>
-                        <id>ossrh</id>
-                        <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-                </snapshotRepository>
-                <repository>
-                        <id>ossrh</id>
-                        <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-                </repository>
-        </distributionManagement>
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.renci.node-agent2</groupId>
-      <artifactId>agentlib</artifactId>
-      <version>${na2.version}</version>
-    </dependency>
-  </dependencies>
-        <build>
-                <plugins>
-                        <plugin>
-                                <groupId>org.apache.maven.plugins</groupId>
-                                <artifactId>maven-compiler-plugin</artifactId>
-                                <version>2.0.2</version>
-                                <configuration>
-                                        <source>1.8</source>
-                                        <target>1.8</target>
-                                </configuration>
-                        </plugin>
-                        <plugin>
-                                <artifactId>maven-assembly-plugin</artifactId>
-                                <configuration>
-                                        <archive>
-                                                <manifest>
-                                                        <mainClass>org.renci.nodeagent2.exec.Main</mainClass>
-                                                </manifest>
-                                        </archive>
-                                        <descriptorRefs>
-                                                <descriptorRef>jar-with-dependencies</descriptorRef>
-                                        </descriptorRefs>
-                                </configuration>
-                                <executions>
-                                        <execution>
-                                                <id>make-assembly</id> <!-- this is used for inheritance merges -->
-                                                <phase>package</phase> <!-- bind to the packaging phase -->
-                                                <goals>
-                                                        <goal>single</goal>
-                                                </goals>
-                                        </execution>
-                                </executions>
-                        </plugin>
-                </plugins>
-        </build>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.renci.node-agent2</groupId>
+			<artifactId>agentlib</artifactId>
+			<version>${na2.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+			<version>${spring.boot.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.web.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.0.2</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>org.renci.nodeagent2.exec.Main</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id> <!-- this is used for inheritance merges -->
+						<phase>package</phase> <!-- bind to the packaging phase -->
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 	<profiles>
-                <profile>
-                        <id>release</id>
-                        <build>
-                                <plugins>
-                                        <plugin>
-                                                <groupId>org.sonatype.plugins</groupId>
-                                                <artifactId>nexus-staging-maven-plugin</artifactId>
-                                                <version>1.6.7</version>
-                                                <executions>
-                                                        <execution>
-                                                                <id>default-deploy</id>
-                                                                <phase>deploy</phase>
-                                                                <goals>
-                                                                        <goal>deploy</goal>
-                                                                </goals>
-                                                        </execution>
-                                                </executions>
-                                                <configuration>
-                                                        <serverId>ossrh</serverId>
-                                                        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                                                        <autoReleaseAfterClose>true</autoReleaseAfterClose>
-                                                </configuration>
-                                        </plugin>
-                                        <plugin>
-                                                <groupId>org.apache.maven.plugins</groupId>
-                                                <artifactId>maven-source-plugin</artifactId>
-                                                <version>2.2.1</version>
-                                                <executions>
-                                                        <execution>
-                                                                <id>attach-sources</id>
-                                                                <goals>
-                                                                        <goal>jar-no-fork</goal>
-                                                                </goals>
-                                                        </execution>
-                                                </executions>
-                                        </plugin>
-                                        <plugin>
-                                                <groupId>org.apache.maven.plugins</groupId>
-                                                <artifactId>maven-javadoc-plugin</artifactId>
-                                                <version>2.9.1</version>
-                                                <executions>
-                                                        <execution>
-                                                                <id>attach-javadocs</id>
-                                                                <goals>
-                                                                        <goal>jar</goal>
-                                                                </goals>
-                                                        </execution>
-                                                </executions>
-                                        </plugin>
-                                        <plugin>
-                                                <groupId>org.apache.maven.plugins</groupId>
-                                                <artifactId>maven-gpg-plugin</artifactId>
-                                                <version>1.5</version>
-                                                <executions>
-                                                        <execution>
-                                                                <id>sign-artifacts</id>
-                                                                <phase>verify</phase>
-                                                                <goals>
-                                                                        <goal>sign</goal>
-                                                                </goals>
-                                                        </execution>
-                                                </executions>
-                                        </plugin>
-                                </plugins>
-                        </build>
-                </profile>
-        </profiles>
+		<profile>
+			<id>release</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.sonatype.plugins</groupId>
+						<artifactId>nexus-staging-maven-plugin</artifactId>
+						<version>1.6.7</version>
+						<executions>
+							<execution>
+								<id>default-deploy</id>
+								<phase>deploy</phase>
+								<goals>
+									<goal>deploy</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<serverId>ossrh</serverId>
+							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+							<autoReleaseAfterClose>true</autoReleaseAfterClose>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-source-plugin</artifactId>
+						<version>2.2.1</version>
+						<executions>
+							<execution>
+								<id>attach-sources</id>
+								<goals>
+									<goal>jar-no-fork</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<version>2.9.1</version>
+						<executions>
+							<execution>
+								<id>attach-javadocs</id>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.5</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 
 </project>
