--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<na2.version>0.2.1-SNAPSHOT</na2.version>
+		<na2.version>0.2.1</na2.version>
 		<spring.boot.version>1.5.3.RELEASE</spring.boot.version>
 		<spring.web.version>4.3.8.RELEASE</spring.web.version>
 		<jackson.version>2.8.8</jackson.version>
