--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,21 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
+				<configuration>
+					<!-- The configuration for the Maven release plugin should include disabling
+						the release profile that is part of the Maven Super POM, since we are using
+						our own profile, and specify the deploy goal together with the activation
+						of our release profile -->
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+					<useReleaseProfile>false</useReleaseProfile>
+					<releaseProfiles>release</releaseProfiles>
+					<goals>deploy</goals>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<profiles>
