--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.renci.node-agent2</groupId>
 	<artifactId>oess-plugin</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>jar</packaging>
 
 	<name>oess-plugin</name>
@@ -41,7 +40,7 @@
 		<connection>scm:git:git@github.com:RENCI-NRIG/no2-oess-plugin.git</connection>
 		<developerConnection>scm:git:git@github.com:RENCI-NRIG/na2-oess-plugin.git</developerConnection>
 		<url>https://github.com/RENCI-NRIG/na2-oess-plugin</url>
-		<tag>HEAD</tag>
+		<tag>oess-plugin-1.0</tag>
 	</scm>
 
 	<repositories>
