[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>org.renci.node-agent2</groupId>
 	<artifactId>oess-plugin</artifactId>
-	<version>1.0</version>
+	<version>1.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>oess-plugin</name>
@@ -40,7 +40,7 @@
 		<connection>scm:git:git@github.com:RENCI-NRIG/no2-oess-plugin.git</connection>
 		<developerConnection>scm:git:git@github.com:RENCI-NRIG/na2-oess-plugin.git</developerConnection>
 		<url>https://github.com/RENCI-NRIG/na2-oess-plugin</url>
-		<tag>oess-plugin-1.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<repositories>
